scripts/nullaway/annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8.txt
../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:29: error: [NullAway] @NonNull static field gwcaConnection not initialized
    private static GWCAConnection gwcaConnection;
                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:30: error: [NullAway] @NonNull static field cb not initialized
    private static JComboBox cb, cbType;
                             ^
    (see http://t.uber.com/nullaway )
../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:30: error: [NullAway] @NonNull static field cbType not initialized
    private static JComboBox cb, cbType;
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:32: error: [NullAway] @NonNull static field wLabel not initialized
    private static JLabel wLabel, lLabel;
                          ^
    (see http://t.uber.com/nullaway )
../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:32: error: [NullAway] @NonNull static field lLabel not initialized
    private static JLabel wLabel, lLabel;
                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:137: error: [NullAway] dereferenced expression wTextField is @Nullable
        String wInput = wTextField.getText();
                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:138: error: [NullAway] dereferenced expression lTextField is @Nullable
        String lInput = lTextField.getText();
                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Tutorial2.java:44: error: [NullAway] dereferenced expression gwcaConnection is @Nullable
                gwcaConnection.close();
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Tutorial1.java:66: error: [NullAway] dereferenced expression gwcaConnection is @Nullable
                gwcaConnection.close();
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/NamedPipeGWCAConnection.java:16: error: [NullAway] initializer method does not guarantee @NonNull field namedPipe (line 13) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public NamedPipeGWCAConnection(File namedPipeLocation) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/NamedPipeGWCAConnection.java:20: error: [NullAway] initializer method does not guarantee @NonNull field namedPipe (line 13) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public NamedPipeGWCAConnection(int pid) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/NamedPipeGWCAConnection.java:62: error: [NullAway] passing @Nullable parameter 'GWCAOperation.toEnum(operationId)' where @NonNull is required
        return new GWCAPacket(GWCAOperation.toEnum(operationId), operationType, wparam, lparam);
                                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Tutorial3.java:46: error: [NullAway] dereferenced expression gwcaConnection is @Nullable
                gwcaConnection.close();
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Version.java:39: error: [NullAway] dereferenced expression props.get("version") is @Nullable
            version = props.get("version").toString();
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/MainTestingAllFunctions.java:307: error: [NullAway] dereferenced expression gwcaConnection is @Nullable
                gwcaConnection.close();
                              ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
15 errors
